fixed aligning issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -267,7 +267,7 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   text-emphasis-color:white;
   color: white;
-  font-size: 3.0rem;
+  font-size: 2.0rem;
 
 
 }
